@@ -9,4 +9,4 @@ Version: @HWLOC_VERSION@
 Requires.private: @HWLOC_REQUIRES@
 Cflags: -I${includedir}
 Libs: -L${libdir} -lhwloc
-Libs.private: @HWLOC_LIBS@ @HWLOC_LTDL_LIBS@ @HWLOC_LIBS_PRIVATE@
+Libs.private: @HWLOC_LIBS@ @HWLOC_DL_LIBS@ @HWLOC_LTDL_LIBS@ @HWLOC_LIBS_PRIVATE@
