@@ -21,7 +21,7 @@ endif
 
 pluginsdir = @HWLOC_PLUGINS_DIR@
 plugins_LTLIBRARIES =
-plugins_ldflags = -module -avoid-version $(HWLOC_LTDL_LIBS)
+plugins_ldflags = -module -avoid-version $(HWLOC_DL_LIBS) $(HWLOC_LTDL_LIBS)
 # Beware that files are not rebuilt automatically when reconfiguring with different paths in these flags.
 AM_CPPFLAGS += -DHWLOC_PLUGINS_PATH="\"$(HWLOC_PLUGINS_PATH)\"" -DRUNSTATEDIR="\"$(HWLOC_runstatedir)\""
 
@@ -199,7 +199,7 @@ endif HWLOC_HAVE_WINDOWS
 # Installable library
 
 libhwloc_la_SOURCES = $(sources)
-libhwloc_la_LDFLAGS = $(ldflags) -version-info $(libhwloc_so_version) $(HWLOC_LIBS) $(HWLOC_LTDL_LIBS) $(HWLOC_LDFLAGS)
+libhwloc_la_LDFLAGS = $(ldflags) -version-info $(libhwloc_so_version) $(HWLOC_LIBS) $(HWLOC_DL_LIBS) $(HWLOC_LTDL_LIBS) $(HWLOC_LDFLAGS)
 
 if HWLOC_HAVE_PLUGINS
 libhwloc_la_LDFLAGS += -export-dynamic
