@@ -1,5 +1,5 @@
 /*
- * Copyright © 2013-2019 Inria.  All rights reserved.
+ * Copyright © 2013-2020 Inria.  All rights reserved.
  * Copyright © 2016 Cisco Systems, Inc.  All rights reserved.
  * See COPYING in top-level directory.
  */
@@ -17,7 +17,11 @@ struct hwloc_backend;
 
 #ifdef HWLOC_INSIDE_PLUGIN
 /* needed for hwloc_plugin_check_namespace() */
+#ifdef HWLOC_HAVE_LTDL
 #include <ltdl.h>
+#else
+#include <dlfcn.h>
+#endif
 #endif
 
 
@@ -418,14 +422,22 @@ static __hwloc_inline int
 hwloc_plugin_check_namespace(const char *pluginname __hwloc_attribute_unused, const char *symbol __hwloc_attribute_unused)
 {
 #ifdef HWLOC_INSIDE_PLUGIN
-  lt_dlhandle handle;
   void *sym;
-  handle = lt_dlopen(NULL);
+#ifdef HWLOC_HAVE_LTDL
+  lt_dlhandle handle = lt_dlopen(NULL);
+#else
+  void *handle = dlopen(NULL, RTLD_NOW|RTLD_LOCAL);
+#endif
   if (!handle)
     /* cannot check, assume things will work */
     return 0;
+#ifdef HWLOC_HAVE_LTDL
   sym = lt_dlsym(handle, symbol);
   lt_dlclose(handle);
+#else
+  sym = dlsym(handle, symbol);
+  dlclose(handle);
+#endif
   if (!sym) {
     static int verboseenv_checked = 0;
     static int verboseenv_value = 0;
